test/libsolidity/syntaxTests/nameAndTypeResolution/inline_assembly_local_variable_access_out_of_functions.sol
pragma experimental "v0.5.0";
contract test {
    function f() public {
        uint a;
        assembly {
            function g() -> x { x := a }
        }
    }
}
// ----
// DeclarationError: (144-145): Cannot access local Solidity variables from inside an inline assembly function.
